# rush

./: Cargo.toml  README.md  justfile
rush/: Cargo.toml
rush-core/: Cargo.toml
rush-core/src/: lexer.rs  lib.rs  prelude.rs  util.rs  walker.rs
rush-shard/: Cargo.toml
rush-shard/src/: lib.rs
rush/src/: drive.rs  main.rs  parse.rs  prelude.rs  shell.rs  task.rs  util.rs  walker.rs
src/: cli.rs  drive.rs  lexer.rs  lib.rs  main.rs  parse.rs  prelude.rs  shell.rs  task.rs  util.rs  walker.rs
src/lexer/: mod.rs  token.rs
src/parse/: cmd.rs  mod.rs  parser.rs  prompter.rs
src/parse/ast/: item.rs  mod.rs
src/shell/: driver.rs  fd.rs  mod.rs  state.rs  task.rs
src/shell/builtins/: cd.rs  exit.rs  mod.rs
src/util/: char.rs  mod.rs  smap.rs
