[package]
name = "rush"
version = "0.1.0"
authors = ["ashpil <ashpil@pm.me>", "focus172 <evan.stokdyk@gmail.com"]
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
# libshards = { path = "../../crates/shardstypes/" }
# os_pipe = "1.1"
# nix = { version = "0.28", features = ["user"] }
# libc = "0.2"

clap = { version = "4", features = ["derive"] }
resu = { package = "error-stack", version = "0.4" }
atty = "0.2"
log = "0.4"
simplelog = "0.12"
