[package]
name = "rush"
version = "0.1.0"
authors = ["focus172 <evan.stokdyk@gmail.com>"]
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

# We want this to be small in production
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# libshards = { path = "../../crates/shardstypes/" }
# os_pipe = "1.1"

atty = "0.2"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
resu = { package = "error-stack", version = "0.4" }

# futures = "0.3"
# nix = { version = "0.28", features = ["fs", "user"] }

paris = { version = "1.5", features = ["macros", "no_logger"], optional = true }

[features]
log = ["paris"]
